{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 261,
  "lineage": "2b560a87-917d-0c62-96d7-6eb2a626a169",
  "resources": [
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:10.982-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-health-check",
            "log_config": [],
            "name": "test-vpc-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 1000,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:10.918-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-icmp",
            "log_config": [],
            "name": "test-vpc-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-icmp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:10.925-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-internal",
            "log_config": [],
            "name": "test-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.1.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "pre_populated",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:11.032-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-http",
            "log_config": [],
            "name": "test-vpc-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:11.032-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-https",
            "log_config": [],
            "name": "test-vpc-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:11.166-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-rdp",
            "log_config": [],
            "name": "test-vpc-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-07T04:18:10.905-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-ssh",
            "log_config": [],
            "name": "test-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "priority": 65534,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/firewalls/test-vpc-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "mtu": 0,
            "name": "test-vpc",
            "project": "ms-gcp-g-i-cze-d-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc"
          }
        }
      ]
    },
    {
      "module": "module.custom-vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-07T04:18:14.026-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ms-gcp-g-i-cze-d-dev/regions/europe-north1/subnetworks/vpc-sub-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "vpc-sub-1",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ms-gcp-g-i-cze-d-dev",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/regions/europe-north1/subnetworks/vpc-sub-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-07T04:18:12.232-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/ms-gcp-g-i-cze-d-dev/regions/us-west1/subnetworks/vpc-sub-2",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "vpc-sub-2",
            "network": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/networks/test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ms-gcp-g-i-cze-d-dev",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/regions/us-west1/subnetworks/vpc-sub-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.custom-vpc.google_compute_network.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "test_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/zones/europe-north1-b/instanceGroups/mig-1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-12-07T04:19:45.013-08:00",
            "enable_cdn": true,
            "fingerprint": "x_mZNknD7mo=",
            "health_checks": [
              "projects/ms-gcp-g-i-cze-d-dev/global/healthChecks/test-backend-http-health-check"
            ],
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-1",
            "load_balancing_scheme": "EXTERNAL",
            "name": "test-backend-service-1",
            "port_name": "http",
            "project": "ms-gcp-g-i-cze-d-dev",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/securityPolicies/test-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-1",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.global-http-lb.google_compute_health_check.http_health_check",
            "module.global-http-lb.google_compute_security_policy.backend_security_policy",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/zones/us-west1-b/instanceGroups/mig-2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-12-07T04:19:44.636-08:00",
            "enable_cdn": true,
            "fingerprint": "5WswUs5muJ0=",
            "health_checks": [
              "projects/ms-gcp-g-i-cze-d-dev/global/healthChecks/test-backend-http-health-check"
            ],
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-2",
            "load_balancing_scheme": "EXTERNAL",
            "name": "test-backend-service-2",
            "port_name": "http",
            "project": "ms-gcp-g-i-cze-d-dev",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/securityPolicies/test-security-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-2",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.global-http-lb.google_compute_health_check.http_health_check",
            "module.global-http-lb.google_compute_security_policy.backend_security_policy",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.120.102.249",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-12-07T04:19:31.902-08:00",
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/addresses/test-backend-static-address",
            "name": "test-backend-static-address",
            "prefix_length": 0,
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/addresses/test-backend-static-address"
          },
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/forwardingRules/test-backend-http-fwd-rule",
            "ip_address": "projects/ms-gcp-g-i-cze-d-dev/global/addresses/test-backend-static-address",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "test-backend-http-fwd-rule",
            "port_range": "80",
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/forwardingRules/test-backend-http-fwd-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/targetHttpProxies/test-backend-http-proxy"
          },
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.global-http-lb.google_compute_backend_service.test_backend_service",
            "module.global-http-lb.google_compute_global_address.static_ip",
            "module.global-http-lb.google_compute_health_check.http_health_check",
            "module.global-http-lb.google_compute_security_policy.backend_security_policy",
            "module.global-http-lb.google_compute_target_http_proxy.http_target_proxy",
            "module.global-http-lb.google_compute_url_map.url_map",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "backend_security_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "pfyM2wp8NUg=",
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/securityPolicies/test-security-policy",
            "name": "test-security-policy",
            "project": "ms-gcp-g-i-cze-d-dev",
            "rule": [
              {
                "action": "allow",
                "description": "allow access to the specific IP's as needed",
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "9.9.9.0/24"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Deny access to all by default",
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/securityPolicies/test-security-policy",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_target_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-07T04:20:41.797-08:00",
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/targetHttpProxies/test-backend-http-proxy",
            "name": "test-backend-http-proxy",
            "project": "ms-gcp-g-i-cze-d-dev",
            "proxy_bind": false,
            "proxy_id": 4960551208440642550,
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/targetHttpProxies/test-backend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/urlMaps/test-backend-http"
          },
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.global-http-lb.google_compute_backend_service.test_backend_service",
            "module.global-http-lb.google_compute_health_check.http_health_check",
            "module.global-http-lb.google_compute_security_policy.backend_security_policy",
            "module.global-http-lb.google_compute_url_map.url_map",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    },
    {
      "module": "module.global-http-lb",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-07T04:20:29.740-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-1",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "8aIXfmabLLQ=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "mysite.com"
                ],
                "path_matcher": "mysite"
              }
            ],
            "id": "projects/ms-gcp-g-i-cze-d-dev/global/urlMaps/test-backend-http",
            "map_id": 1817122038146218978,
            "name": "test-backend-http",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-1",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "mysite",
                "path_rule": [
                  {
                    "paths": [
                      "/nginx"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/backendServices/test-backend-service-2",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "ms-gcp-g-i-cze-d-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ms-gcp-g-i-cze-d-dev/global/urlMaps/test-backend-http",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.custom-vpc.google_compute_firewall.allow_health_check",
            "module.custom-vpc.google_compute_firewall.allow_icmp",
            "module.custom-vpc.google_compute_firewall.allow_internal",
            "module.custom-vpc.google_compute_firewall.pre_populated",
            "module.custom-vpc.google_compute_network.terraform_vpc",
            "module.custom-vpc.google_compute_subnetwork.terraform_subnet",
            "module.global-http-lb.google_compute_backend_service.test_backend_service",
            "module.global-http-lb.google_compute_health_check.http_health_check",
            "module.global-http-lb.google_compute_security_policy.backend_security_policy",
            "module.managed-group.google_compute_autoscaler.autoscaler",
            "module.managed-group.google_compute_instance_group_manager.terraform_instance_group",
            "module.managed-group.google_compute_instance_template.terraform_test_template"
          ]
        }
      ]
    }
  ]
}